--- a/index.html
+++ b/index.html
@@ -5,34 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EnderCloud - Hosting Minecraft</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      background: linear-gradient(to bottom right, #0f172a, #1e293b);
+    }
+  </style>
 </head>
-<body class="bg-slate-950 text-white">
+<body class="text-white font-sans">
 
   <!-- Header -->
-  <header class="bg-slate-900/70 backdrop-blur border-b border-slate-800">
+  <header class="bg-slate-900/80 backdrop-blur border-b border-slate-800 fixed w-full top-0 z-50">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
       <h1 class="text-xl font-bold text-sky-400">EnderCloud</h1>
-      <!-- Desktop Nav -->
+
+      <!-- Nav -->
       <nav class="hidden md:flex items-center space-x-6">
-        <div class="relative group">
-          <button class="flex items-center gap-1">Chọn Hosting</button>
-          <div class="absolute hidden group-hover:block bg-slate-800 border border-slate-700 rounded-lg mt-2 w-64">
+        <!-- Dropdown -->
+        <div class="relative">
+          <button id="hostingBtn" class="flex items-center gap-1">
+            Chọn Hosting ▼
+          </button>
+          <div id="hostingMenu" class="hidden absolute bg-slate-800 border border-slate-700 rounded-lg mt-2 w-56 shadow-lg">
             <a href="cheap.html" class="block px-4 py-2 hover:bg-slate-700">Cheap Hosting</a>
             <a href="basic.html" class="block px-4 py-2 hover:bg-slate-700">Basic Hosting</a>
             <a href="medium.html" class="block px-4 py-2 hover:bg-slate-700">Medium Hosting</a>
             <a href="premium.html" class="block px-4 py-2 hover:bg-slate-700">Premium Hosting</a>
           </div>
         </div>
-        <a href="https://discord.gg/jnVqH3Dfs9" target="_blank" class="text-sm hover:text-sky-300">Hỗ Trợ</a>
-        <a href="#" class="text-sm hover:text-sky-300">Đăng Nhập</a>
+        <a href="https://discord.gg/jnVqH3Dfs9" target="_blank" class="hover:text-sky-300">Hỗ Trợ</a>
+        <a href="#" class="hover:text-sky-300">Đăng Nhập</a>
       </nav>
-      <!-- Mobile Button -->
+
+      <!-- Mobile -->
       <button id="menuBtn" class="md:hidden">☰</button>
     </div>
   </header>
 
   <!-- Mobile Menu -->
-  <div id="mobilePanel" class="hidden md:hidden bg-slate-900/95 border-t border-slate-800">
+  <div id="mobilePanel" class="hidden md:hidden bg-slate-900/95 border-t border-slate-800 mt-16">
     <div class="max-w-7xl mx-auto px-6 py-4 space-y-2">
       <a href="cheap.html" class="block py-2">Cheap Hosting</a>
       <a href="basic.html" class="block py-2">Basic Hosting</a>
@@ -44,19 +54,42 @@
   </div>
 
   <!-- Hero -->
-  <section class="text-center py-20">
-    <h2 class="text-4xl font-bold mb-4">EnderCloud - Giải pháp Hosting Minecraft tối ưu</h2>
-    <p class="text-slate-400 max-w-2xl mx-auto">
-      Chọn gói hosting phù hợp nhu cầu của bạn. Thanh toán nhanh chóng, có thể hủy bất cứ lúc nào.
+  <section class="pt-32 pb-20 text-center">
+    <h2 class="text-5xl font-extrabold mb-6">
+      Dịch vụ cho thuê máy chủ <span class="text-sky-400">Game Việt Nam</span>
+    </h2>
+    <p class="text-slate-300 max-w-2xl mx-auto text-lg">
+      EnderCloud mang đến giải pháp lưu trữ Minecraft và game server tối ưu, 
+      chất lượng cao, giá cả hợp lý, hỗ trợ 24/7.
     </p>
+    <div class="mt-8 space-x-4">
+      <a href="cheap.html" class="px-6 py-3 bg-sky-500 hover:bg-sky-600 rounded-lg font-medium">
+        Tạo máy chủ ngay
+      </a>
+      <a href="https://discord.gg/jnVqH3Dfs9" target="_blank" class="px-6 py-3 bg-slate-800 hover:bg-slate-700 rounded-lg font-medium">
+        Liên hệ hỗ trợ
+      </a>
+    </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-slate-900/70 border-t border-slate-800 py-6 text-center text-slate-500">
+  <footer class="bg-slate-900/80 border-t border-slate-800 py-6 text-center text-slate-500">
     © 2025 EnderCloud. All rights reserved.
   </footer>
 
   <script>
+    // Toggle dropdown menu
+    const hostingBtn = document.getElementById("hostingBtn");
+    const hostingMenu = document.getElementById("hostingMenu");
+    document.addEventListener("click", (e) => {
+      if (hostingBtn.contains(e.target)) {
+        hostingMenu.classList.toggle("hidden");
+      } else if (!hostingMenu.contains(e.target)) {
+        hostingMenu.classList.add("hidden");
+      }
+    });
+
+    // Mobile menu toggle
     document.getElementById("menuBtn").addEventListener("click", () => {
       document.getElementById("mobilePanel").classList.toggle("hidden");
     });
